<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DaftarActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="108dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:text="@string/ldaftar"
        android:textColor="@color/black"
        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MasukkanNama"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:hint="@string/enama"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/Alamat"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:hint="@string/ealamat"
        android:ems="10"
        android:textColor="@color/black"
        android:inputType="textMultiLine|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasukkanNama" />

    <TextView
        android:id="@+id/MasukkanEmail"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/eemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Alamat"/>

    <TextView
        android:id="@+id/MasukkanPassword"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/epass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasukkanEmail" />

    <TextView
        android:id="@+id/MasukkanPasswordKembali"
        android:layout_width="331dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MasukkanPassword" />

    <Button
        android:id="@+id/Daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/daftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        android:focusable="true" />

    <Button
        android:id="@+id/Batal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/batal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>